# bar-raiser

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/: ISSUE_TEMPLATE  pull_request_template.md
.github/actions/setup/: action.yml
.github/workflows/: build.yml  release.yml
actions/publish-files/: action.yml
src/bar_raiser/autofixes/: notify_reviewer_teams.py
src/bar_raiser/checks/: annotate_merge_commits.py  annotate_run_ruff.py
src/bar_raiser/codemods/: remove_unnecessary_pyright_ignore_comments.py
src/bar_raiser/tech_debt_framework/: run_analyzers.py  utils.py
src/bar_raiser/utils/: check.py  github.py  slack.py
tests/autofixes/: test_notify_reviewer_teams.py
tests/checks/: test_annotate_ruff.py  test_annotate_run_ruff.py
tests/utils/: test_github.py
